--- a/TimeManagement/actions/stopwatch/property_inspector/property_inspector.html
+++ b/TimeManagement/actions/stopwatch/property_inspector/property_inspector.html
@@ -1,14 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>ChronoPlugin Property Inspector</title>
-	<link rel="stylesheet" href="css/sdpi.css">
-	<link rel="stylesheet" href="css/property-inspector.css">
+    <meta charset="utf-8" />
+    <title>ChronoPlugin Property Inspector</title>
+    <link rel="stylesheet" href="css/sdpi.css">
+    <link rel="stylesheet" href="css/property-inspector.css">
 </head>
 <body>
-	<div class="sdpi-wrapper">
-	</div>
-	<script src="js/property-inspector.js"></script>
+    <div class="sdpi-wrapper">
+        <details class="message caution">
+            <summary>Do not use Title input</summary>
+        </details>
+    </div>
+    <script src="js/property-inspector.js"></script>
 </body>
 </html>
